--- a/packages/windmill-a11y/package.json
+++ b/packages/windmill-a11y/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@wixc3/windmill-a11y",
   "version": "1.0.7",
-  "main": "src/index",
+  "main": "cjs/index",
   "module": "esm/index.js",
   "types": "esm/index.d.ts",
   "bin": {
-    "windmill-a11y": "bin/cli.js"
+    "windmill-a11y": "bin/windmill-a11y.js"
   },
   "scripts": {
     "clean": "rimraf ./cjs ./esm",
