--- a/packages/windmill-mock-repo/package.json
+++ b/packages/windmill-mock-repo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wixc3/windmill-mock-repo",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "main": "cjs/index",
   "module": "esm/index.js",
   "types": "esm/index.d.ts",
@@ -15,9 +15,9 @@
     "react": ">=16"
   },
   "dependencies": {
-    "@wixc3/windmill-a11y": "^1.0.10",
-    "@wixc3/windmill-utils": "^1.0.8",
-    "@wixc3/windmill-sanity": "^1.0.0"
+    "@wixc3/windmill-a11y": "^1.0.11",
+    "@wixc3/windmill-sanity": "^1.0.1",
+    "@wixc3/windmill-utils": "^1.0.9"
   },
   "files": [
     "cjs",
