--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
                 "@typescript-eslint/no-floating-promises": "error",
                 "@typescript-eslint/no-use-before-define": "off",
                 "@typescript-eslint/no-unused-vars": "off",
+                "@typescript-eslint/no-explicit-any": "off",
                 "@typescript-eslint/no-unnecessary-type-assertion": "off"
             }
         }
