--- a/packages/windmill-a11y/package.json
+++ b/packages/windmill-a11y/package.json
@@ -23,6 +23,7 @@
     "@wixc3/windmill-node-utils": "^2.0.0",
     "@wixc3/windmill-utils": "^2.0.0",
     "axe-core": "^4.0.1",
+    "commander": "^6.0.0",
     "glob": "^7.1.6",
     "tsconfig-paths": "^3.9.0",
     "webpack": "^4.44.1"
