--- a/packages/windmill-node-utils/package.json
+++ b/packages/windmill-node-utils/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf ./cjs",
     "prebuild": "yarn clean",
     "build": "ts-build ./src --cjs",
-    "test": "mocha \"test/**/*.spec.ts?(x)\"",
+    "test": "mocha -r @ts-tools/node/r \"test/**/*.unit.ts?(x)\"",
     "prepack": "yarn build"
   },
   "peerDependencies": {
