--- a/package.json
+++ b/package.json
@@ -21,12 +21,10 @@
     "@file-services/path": "^5.3.0",
     "@file-services/types": "^5.3.0",
     "@file-services/webpack": "^5.3.0",
-    "@stylable/cli": "^3.11.13",
-    "@stylable/core": "^3.11.13",
-    "@stylable/dom-test-kit": "^3.11.13",
-    "@stylable/node": "^3.11.13",
-    "@stylable/runtime": "^3.11.13",
-    "@stylable/webpack-plugin": "^3.11.13",
+    "@stylable/core": "^3.11.14",
+    "@stylable/node": "^3.11.14",
+    "@stylable/runtime": "^3.11.14",
+    "@stylable/webpack-plugin": "^3.11.14",
     "@ts-tools/build": "^2.1.1",
     "@ts-tools/node": "^2.1.1",
     "@ts-tools/webpack-loader": "^2.1.1",
@@ -40,7 +38,7 @@
     "@types/minimatch": "^3.0.3",
     "@types/mocha": "^8.2.0",
     "@types/node": "12",
-    "@types/puppeteer": "^5.4.2",
+    "@types/puppeteer": "^5.4.3",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/sinon": "^9.0.10",
@@ -65,7 +63,7 @@
     "mocha": "^8.2.1",
     "mocha-pup": "^5.1.6",
     "npm-run-all": "^4.1.5",
-    "puppeteer": "^7.0.0",
+    "puppeteer": "7.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rimraf": "^3.0.2",
